versioned_docs/version-23.1/reference/rpk/rpk-group/rpk-group-seek.mdx
---
title: rpk group seek
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk group seek | Redpanda Docs" />
  <meta name="description" content="rpk group seek" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-group/rpk-group-seek/" />
</head>

Modify a group's current offsets.

This command allows you to modify a group's offsets. Sometimes, you may need to
rewind a group if you had a mistaken deploy, or fast-forward a group if it is
falling behind on messages that can be skipped.

The `--to` option allows you to seek to the start of partitions, end of
partitions, or after a specific timestamp. The default is to seek any topic
previously committed. Using `--topics` allows to you set commits for only the
specified topics; all other commits will remain untouched. Topics with no
commits will not be committed unless allowed with `--allow-new-topics`.

The `--to-group` option allows you to seek to commits that are in another group.
This is a merging operation: if g1 is consuming topics A and B, and g2 is
consuming only topic B, `rpk group seek g1 --to-group g2` will update g1's
commits for topic B only. The `--topics` flag can be used to further narrow which
topics are updated. Unlike `--to`, all non-filtered topics are committed, even
topics not yet being consumed, meaning `--allow-new-topics` is not needed.

The `--to-file` option allows to seek to offsets specified in a text file with
the following format:

```
[TOPIC] [PARTITION] [OFFSET]
[TOPIC] [PARTITION] [OFFSET]
```

Each line contains the topic, the partition, and the offset to seek to. As with
the prior options, `--topics` allows filtering which topics are updated. Similar
to `--to-group`, all non-filtered topics are committed, even topics not yet being
consumed, meaning --allow-new-topics is not needed.

The `--to`, `--to-group`, and `--to-file` options are mutually exclusive. If you are
not authorized to describe or read some topics used in a group, you will not be
able to modify offsets for those topics.

### Examples

Seek group G to June 1st, 2021:

```
rpk group seek g --to 1622505600
```

or

```
rpk group seek g --to 1622505600000
```

or

```
rpk group seek g --to 1622505600000000000

```

Seek group X to the commits of group Y topic foo:

```
rpk group seek X --to-group Y --topics foo
```

Seek group G's topics foo, bar, and biz to the end:

```
rpk group seek G --to end --topics foo,bar,biz
```

Seek group G to the beginning of a topic it was not previously consuming:

```
rpk group seek G --to start --topics foo --allow-new-topics
```

## Usage

```bash
rpk group seek [GROUP] --to (start|end|timestamp) --to-group ... --topics ... [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--allow-new-topics</td>
      <td>-</td>
      <td>
        Allow seeking to new topics not currently consumed (implied with
        --to-group or --to-file).
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for seek.</td>
    </tr>
    <tr>
      <td>--to</td>
      <td>string</td>
      <td>
        Where to seek (start, end, unix second | millisecond | nanosecond).
      </td>
    </tr>
    <tr>
      <td>--to-file</td>
      <td>string</td>
      <td>Seek to offsets as specified in the file.</td>
    </tr>
    <tr>
      <td>--to-group</td>
      <td>string</td>
      <td>Seek to the commits of another group.</td>
    </tr>
    <tr>
      <td>--topics</td>
      <td>strings</td>
      <td>Only seek these topics, if any are specified.</td>
    </tr>
    <tr>
      <td>--brokers</td>
      <td>strings</td>
      <td>
        Comma-separated list of broker &lt;ip&gt;:&lt;port&gt; pairs (for example,
        <code>
          --brokers '192.168.78.34:9092,192.168.78.35:9092,192.179.23.54:9092'
        </code>
        ). Alternatively, you may set the <code>REDPANDA_BROKERS</code>
        environment variable with the comma-separated list of broker addresses.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda config file, if not set the file will be searched for in the
        default locations.
      </td>
    </tr>
    <tr>
      <td>--password</td>
      <td>string</td>
      <td>SASL password to be used for authentication.</td>
    </tr>
    <tr>
      <td>--sasl-mechanism</td>
      <td>string</td>
      <td>
        The authentication mechanism to use. Supported values:
        <code>SCRAM-SHA-256</code>, <code>SCRAM-SHA-512</code>.
      </td>
    </tr>
    <tr>
      <td>--tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Kafka API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the broker.
      </td>
    </tr>
    <tr>
      <td>--tls-truststore</td>
      <td>string</td>
      <td>The truststore to be used for TLS communication with the broker.</td>
    </tr>
    <tr>
      <td>--user</td>
      <td>string</td>
      <td>SASL user to be used for authentication.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
